2002-10-24  Naba Kumar <naba@gnome.org>

	* macro/autogen.sh: Removed debug and warning flags for defaults.
	
	Patch from Vadim Berezniker <vadim@berezniker.com>
	
	* tagmanager/tm_workspace.[h,c], global-tags/create_global_tags.sh,
	global-tags/tm_global_tags.c: Fixed infinite loop in system tags
	generation.

	* Makefile.am: XML merge is broken for .destop in RH 8.0, so
	temporarily just copy it
	
2002-10-24  Naba Kumar <naba@gnome.org>

	* manuals/sgmldocs.make, anuals/C/anjuta-faqs/anjuta-faqs.sgml,
	manuals/C/anjuta-manual/anjuta-manual.sgml, 
	manuals/C/anjuta-manual/compileopts.sgml,
	manuals/C/anjuta-manual/debugger.sgml,
	manuals/C/anjuta-manual/execute.sgml,
	manuals/C/anjuta-manual/fileoperations.sgml,
	manuals/C/anjuta-manual/interface.sgml,
	manuals/C/anjuta-manual/introduction.sgml,
	manuals/C/anjuta-manual/projects.sgml,
	manuals/C/anjuta-tutorial/anjuta-tutorial.sgml,
	manuals/ja/anjuta-faqs/anjuta-faqs.sgml,
	manuals/ja/anjuta-manual/anjuta-manual.sgml,
	manuals/ja/anjuta-manual/compileopts.sgml,
	manuals/ja/anjuta-manual/debugger.sgml,
	manuals/ja/anjuta-manual/execute.sgml,
	manuals/ja/anjuta-manual/fileoperations.sgml,
	manuals/ja/anjuta-manual/interface.sgml,
	manuals/ja/anjuta-manual/introduction.sgml,
	manuals/ja/anjuta-manual/projects.sgml: Upgraded to Docbook 4.0

2002-10-24  Naba Kumar <naba@gnome.org>

	* src/project_type.c: added autogen for qt projects.
	* src/debugger.c: enabled debugger debugging for DEBUG MODE.
	Fixed a bug that retrieves wrong terminal command.
	* src/commnads.c: Added more terminal commands.
	* configure.in: Checks for scrollkeeper version.
	
2002-10-22  Naba Kumar <naba@gnome.org>

	* configure.in, acinclude.m4, setup-gettext: Used AM_GNU_GETTEXT
	instead of AM_GNOME_GETTEXT.
	
	* src/source.c, data/autogen.sh.*, data/Makefile.am: Added support
	for setup-gettext for the wizard generated projects.

	* src/source.c: Fixed a bug where glade file wasn't generated.
	