@@ -1,5 +1,7 @@
 2002-10-24  Naba Kumar <naba@gnome.org>
 
+	* global_tags/create_global_tags: Added messages.
+
 	* macro/autogen.sh: Removed debug and warning flags for defaults.
 	
 	Patch from Vadim Berezniker <vadim@berezniker.com>
@@ -10,7 +12,7 @@
 
 	* Makefile.am: XML merge is broken for .destop in RH 8.0, so
 	temporarily just copy it
-	
+
 2002-10-24  Naba Kumar <naba@gnome.org>
 
 	* manuals/sgmldocs.make, anuals/C/anjuta-faqs/anjuta-faqs.sgml,
